# StealthTradeDAO

./: README.md  package.json  pnpm-lock.yaml
apps/clob/: package.json  tsconfig.json
apps/clob/api/: server.ts
apps/clob/core/: Readme.md  order.ts  orderMatching.ts
apps/oracle/: oracle.json  package.json  token.json  tsconfig.json
apps/oracle/src/: index.ts  oracle.ts  types.ts
apps/web/: package.json
apps/web/app/trade/: page.tsx
apps/web/components/: orderbook.tsx
apps/web/containers/: aspOrderBookDynamic.tsx  async-page-orderBook.tsx
apps/web/lib/stores/: download.tsx  endpoint.ts  orders.tsx  type.ts
mutlichain_dao/btc2evm/: Cargo.toml  README.md
mutlichain_dao/btc2evm/.github/workflows/: deploy-production.yml  deploy-staging.yml
mutlichain_dao/btc2evm/broadcast/: broadcast.js  btc.js  eth.js  kdf.js  near.js  package.json
mutlichain_dao/btc2evm/src/: external.rs  lib.rs  owner.rs  parse.rs
mutlichain_dao/contracts/: .gitmodules  Makefile  foundry.toml
mutlichain_dao/contracts/broadcast/Deploy.s.sol/44433/: run-latest.json
mutlichain_dao/contracts/broadcast/DeployGov.s.sol/44433/: run-1720784890.json  run-1720784989.json  (+2 more)
mutlichain_dao/contracts/script/: Deploy.s.sol  DeployAccountToken.s.sol  DeployGov.s.sol  DeploySC.s.sol  DeployStableCoin.s.sol  DeployStableCoinManager.s.sol
mutlichain_dao/contracts/src/: Account.sol  AccountToken.sol  Counter.sol  GovToken.sol  Governor.sol  StableCoin.sol  StableCoinManager.sol  TestTransfer.sol  TimeLockController.sol
mutlichain_dao/contracts/src/interfaces/: IAccountToken.sol
(+6 files in other folders)
