[package]
name = "contract"
description = "Simple Pay to Sign"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = { version = "5.2.0", features = ["unstable"] }
hex = "0.4.3"
borsh = { version = "1.0.0", features = ["derive"] }
near-crypto = { version = "0.24.1" }
getrandom = { version = "0.2", features = ["js"] }
bs58 = "0.5.1"
serde = "1.0.208"
serde-big-array = "0.5.1"
omni-transaction = { git = "https://github.com/edsonalcala/omni-transaction-rs.git", branch = "development" }

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing", "unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
